--- a/src/rust/ru.readmanga/res/settings.json
+++ b/src/rust/ru.readmanga/res/settings.json
@@ -1,7 +1,7 @@
 [
   {
     "type": "group",
-    "title": "Веб домен",
+    "title": "Веб домен (В разработке)",
     "items": [
       {
         "type": "text",
