--- a/src/rust/ru.readmanga/Cargo.toml
+++ b/src/rust/ru.readmanga/Cargo.toml
@@ -19,5 +19,6 @@ lto = true
 aidoku = { git = "https://github.com/Aidoku/aidoku-rs", features = ["helpers"] }
 const_format = "0.2.31"
 itertools = { version = "0.10.5", default-features = false, features = [
+    "helpers",
     "use_alloc",
 ] }
