--- a/src/rust/ru.readmanga/Cargo.toml
+++ b/src/rust/ru.readmanga/Cargo.toml
@@ -16,7 +16,7 @@ strip = true
 lto = true
 
 [dependencies]
-aidoku = { git = "https://github.com/Aidoku/aidoku-rs", features = ["helpers"] }
+aidoku = { git = "https://github.com/Aidoku/aidoku-rs", features = ["helpers", "imports"] }
 const_format = "0.2.31"
 itertools = { version = "0.10.5", default-features = false, features = [
     "use_alloc",
