Trying to add settings page #2

--- a/src/rust/ru.readmanga/res/settings.json
+++ b/src/rust/ru.readmanga/res/settings.json
@@ -1,13 +1,14 @@
 [
 	{
 		"type": "group",
-    "title": "Домен сайта",
+		"title": "Домен сайта",
+		"subtitle": "Если сайт переехал - вы всегда можете поменять здесь домен.",
 		"items": [
 			{
 				"type": "text",
 				"key": "testSetting",
 				"placeholder": "https://3.readmanga.ru",
-        "default": "https://3.readmanga.ru"
+				"default": "https://3.readmanga.ru"
 			}
 		]
 	}
