Trying to add settings page #2

--- a/src/rust/ru.readmanga/res/settings.json
+++ b/src/rust/ru.readmanga/res/settings.json
@@ -7,7 +7,9 @@
 				"type": "text",
 				"key": "baseUrl",
 				"placeholder": "https://3.readmanga.ru",
-				"default": "https://3.readmanga.ru"
+				"default": "https://3.readmanga.ru",
+				"autocorrectionType": 0,
+				"spellCheckingType": 0
 			}
 		]
 	}
