--- a/src/rust/ru.mangaonelove/res/settings.json
+++ b/src/rust/ru.mangaonelove/res/settings.json
@@ -12,5 +12,17 @@
 				"spellCheckingType": 0
 			}
 		]
+	},
+	{
+		"type": "group",
+		"title": "Прочее",
+		"items": [
+			{
+				"type": "switch",
+				"key": "showNsfw",
+				"title": "Показывать NSFW",
+				"default": false
+			}
+		]
 	}
 ]
