--- a/src/rust/ru.mangaonelove/res/settings.json
+++ b/src/rust/ru.mangaonelove/res/settings.json
@@ -22,6 +22,12 @@
 				"key": "showNsfw",
 				"title": "Показывать NSFW",
 				"default": false
+			},
+			{
+				"type": "switch",
+				"key": "showOnlyNsfw",
+				"title": "Только NSFW",
+				"default": false
 			}
 		]
 	}
